--- a/Documentação Projeto Ecoffe/docs/ClientApp/ClientApp/ClientApp/ClientApp.csproj
+++ b/Documentação Projeto Ecoffe/docs/ClientApp/ClientApp/ClientApp/ClientApp.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
