--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Documentação Projeto Ecoffe/.vs/Documentação Projeto Ecoffe/v16
+/Documentação Projeto Ecoffe/.vs
