--- a/src/Ecoffe.Backend/Ecoffe.Backend/Ecoffe.Backend.csproj
+++ b/src/Ecoffe.Backend/Ecoffe.Backend/Ecoffe.Backend.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SharedValidators\NovaPasta\" />
+  </ItemGroup>
+
 </Project>
